--- a/resource/static/front/css/new_css.css
+++ b/resource/static/front/css/new_css.css
@@ -428,7 +428,7 @@ html, body {
 .mt4mobile_main_bot_left li i{display:inline-block;width:25px;height:25px;background:url(../images/mt4pc_main_bot_right.png) center center no-repeat;position:relative;}
 .mt4mobile_main_bot_left a{display:block;width:180px;height:180px;float:left;}
 .mt4mobile_main_bot_left .android{background-image:url(../images/android.png);background-repeat:no-repeat;background-position:-28px -20px}
-.mt4mobile_main_bot_left .ios{background-image:url(../images/ios.png);background-repeat:no-repeat;background-position:-26px -20px;margin-left:20px;}
+.mt4mobile_main_bot_left .ios{background-image:url(../images/ios.png);background-repeat:no-repeat;background-position:-26px -20px;margin-left:72px;}
 .mt4mobile_main_bot_left img{display:inline-block;float:left;position:relative;left:-20px;top:-10px;}
 
 .mt4mobile_main_bot_right img{max-width:100%}
@@ -608,7 +608,7 @@ html, body {
 .headline_main_top input[type="radio"]:checked + label{background-color:#fff;color:#b09373;}
 .headline_main_top input[type="radio"]:checked ~ .headline_main_bot{display:block}
 .headline_main_top input[type="radio"]{display:none}
-.headline_main_bot{width:50%;margin:0 auto;display:none}
+.headline_main_bot{width:50%;margin:0 auto;}/*display:none*/
 
 .headline_main_bot ul {
     list-style: none;
@@ -806,7 +806,7 @@ html, body {
 .announcement_main_top input[type="radio"]{display:none}
 .announcement_main_bot{width:50%;margin:0 auto;display:none;text-align:left;padding-top:50px;}
 .announcement_main_bot .latest{width:100%;height:300px;}
-.announcement_main_bot .latest .latest_news{width:24%;height:100%;float:left;margin-left:1%;text-align:center;background-color:#f5f5f5;position:relative}
+.announcement_main_bot .latest .latest_news{width:32%;height:100%;float:left;margin-left:1%;text-align:center;background-color:#f5f5f5;position:relative}
 .announcement_main_bot .latest .latest_news:hover{cursor:pointer;box-shadow:0px 0 6px rgba(0, 0, 0, 0.2);-webkit-transform: translate3d(0, -3px, 0); transform: translate3d(0, -3px, 0);}
 .announcement_main_bot .latest .latest_news .latest_news_img{height:22%;width:100%;background-size:cover;}
 .announcement_main_bot .latest .latest_news .a1{background:url(../images/latest_news_img1.jpg) center center no-repeat;}
@@ -817,7 +817,7 @@ html, body {
 .announcement_main_bot .latest .latest_news .latest_news_content{height:78%;width:100%;}
 .announcement_main_bot .latest .latest_news .latest_news_content .title{font-size:20px;overflow: hidden;text-overflow: ellipsis;height:20%;color:#000;width:80%;margin:0 auto;font-weight:bold;border-bottom:1px solid #e0e0e0;padding:10px 10px;}
 .announcement_main_bot .latest .latest_news .latest_news_content .content{display: -webkit-box;height:70%;-webkit-box-orient: vertical;-webkit-line-clamp:6;overflow: hidden;width:80%;margin:0 auto;font-size:12px;text-align:left;padding-top:10px;text-indent:1em}
-.announcement_main_bot .latest .latest_news .latest_news_content .time{text-align:right;width:80%;height:10%;margin:0 auto;padding:5px;overflow:hidden;text-overflow: ellipsis;}
+.announcement_main_bot .latest .latest_news .latest_news_content .time{text-align:right;width:80%;height:10%;margin:0 auto;overflow:hidden;text-overflow: ellipsis;}
 .announcement_main_bot .former ul{display:block;padding:30px 20px 20px 30px;}
 .announcement_main_bot .former ul li{list-style:disc;line-height:40px;border-bottom:1px solid #e0e0e0;}
 .announcement_main_bot .former ul li .time{display:inline-block;float:right;}
