--- a/resource/static/front/css/new_css.css
+++ b/resource/static/front/css/new_css.css
@@ -203,7 +203,7 @@ html, body {
 .linkus_message_r{width:70%;float:left;}
 
 
-/*外汇*/
+/*FX*/
 
 .forex_display{width:100%;padding:236px 25% 175px 25%;text-align:center;background:url(../images/forex_bg.jpg) center center no-repeat;background-size:cover}
 .forex_display_center{padding:37px 75px;border:4px solid #fff;}
@@ -722,7 +722,7 @@ html, body {
 
 .page_content_text{display: none;background-color: #f6f6f6}
 
-/*外汇词典*/
+/*FX词典*/
 
 .dictionary_display{width:100%;padding:236px 38% 175px 38%;text-align:center;background:url(../images/dictionary_bg.jpg) center center no-repeat;background-size:cover}
 .dictionary_display_center{padding:37px 75px;border:3px solid #fff;}
@@ -815,7 +815,7 @@ html, body {
 .announcement_main_bot .latest .latest_news .a4{background:url(../images/latest_news_img4.jpg) center center no-repeat;}
 .announcement_main_bot .latest .latest_news .latest_news_img p{color:#fff;text-align:right;width:80%;display:inline-block;margin:0 auto;}
 .announcement_main_bot .latest .latest_news .latest_news_content{height:78%;width:100%;}
-.announcement_main_bot .latest .latest_news .latest_news_content .title{font-size:20px;overflow: hidden;text-overflow: ellipsis;height:20%;color:#000;width:80%;margin:0 auto;font-weight:bold;border-bottom:1px solid #e0e0e0;padding:10px 10px;}
+.announcement_main_bot .latest .latest_news .latest_news_content .title{overflow:hidden;text-overflow:ellipsis;white-space:nowrap;font-size:20px;/* overflow: hidden; *//* text-overflow: ellipsis; */height:20%;color:#000;width:80%;margin:0 auto;font-weight:bold;border-bottom:1px solid #e0e0e0;padding:10px 10px;}
 .announcement_main_bot .latest .latest_news .latest_news_content .content{display: -webkit-box;height:70%;-webkit-box-orient: vertical;-webkit-line-clamp:6;overflow: hidden;width:80%;margin:0 auto;font-size:12px;text-align:left;padding-top:10px;text-indent:1em}
 .announcement_main_bot .latest .latest_news .latest_news_content .time{text-align:right;width:80%;height:10%;margin:0 auto;overflow:hidden;text-overflow: ellipsis;}
 .announcement_main_bot .former ul{display:block;padding:30px 20px 20px 30px;}
